# niseyuki

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
audio/: naming
scripts/: package_windows.ps1
src/: EncodeJob.h  Encoder.cpp  Encoder.h  MainWindow.cpp  MainWindow.h
src/widgets/: StartButton.cpp  StartButton.h
